	   `decreasing' to allow the order to be reversed whilst
	   still preserving ties.

	-  sort() has an option to use different methods in some cases
	   (currently numeric vectors without names and increasing order).

	-  The default Shell sort is Sedgewick's variant, around 20%
           faster, and pre-screening for NAs speeds cases without any
	   NAs several-fold.


DEPRECATED & DEFUNCT

    o	.Alias, reshapeLong(), reshapeWide() are defunct.

    o	arima0.diag() (package ts) is deprecated: use tsdiag() instead.

    o	piechart() is deprecated; renamed to pie().


DOCUMENTATION CHANGES

    o	`Writing R Extensions' now has an example of calling R's
	random numbers from FORTRAN via C.


INSTALLATION CHANGES

    o	The configure script used when building R from source under Unix
	is now generated using Autoconf 2.50 or later, which has the
	following 'visible' consequences:

	- By default, configure no longer uses a cache file.  Use the
          command line options '--config-cache' (or '-C') to enable
          caching.

	- Key configuration variables such as 'CC' are now *precious*,
          implying that the variables

	  * no longer need to be exported to the environment and can and
            should be set as command line arguments;

	  * are kept in the cache even if not specified on the command
            line, and checked for consistency between two configure runs
            (provided that caching is used, see above);

	  * are kept during automatic reconfiguration as if having been
            passed as command line arguments, even if no cache is used.

	  See the variable output section of 'configure --help' for a
	  list of all these variables.

    o	Configure option '--with-g77' is deprecated.  Use configure
	variable 'F77' to specify the FORTRAN 77 compiler.


UTILITIES

    o	Sweave(), Stangle() and friends in package tools.  Sweave allows
	mixing LaTeX documentation and R code in a single source file: